# cache-replacement-simulator

./: CMakeLists.txt  binary-tree.c  cache.c  lru_list.c  lru_list.h  main.c  util.c
include/: binary-tree.h  cache.h  logging.h  lru_list.h  util.h
src/: binary-tree.cpp  cache.c  cache.cpp  logging.c  lru_list.c  lru_list.cpp  main.c  main.cpp  util.c
